--- a/package.json
+++ b/package.json
@@ -17,18 +17,20 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"autoprefixer": "^10.4.20",
-		"daisyui": "^4.12.14",
+		"daisyui": "^5.0.0",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
-		"tailwindcss": "^3.4.9",
+		"tailwindcss": "^4.0.9",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
 	"dependencies": {
 		"@iconify/svelte": "^4.0.2",
+		"@tailwindcss/postcss": "^4.0.9",
+		"@tailwindcss/vite": "^4.0.9",
 		"svelte-inview": "^4.0.4"
 	}
 }
